--- a/app/src/main/res/layout/expandable_semaine_jour4.xml
+++ b/app/src/main/res/layout/expandable_semaine_jour4.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent">
 
     <LinearLayout
+        android:id="@+id/LinearLayoutJ4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#F4EDED"
@@ -31,35 +32,35 @@
                 android:orientation="horizontal">
 
                 <ImageButton
-                    android:id="@+id/imageButtonCalcul"
+                    android:id="@+id/imageButtonDateDebutJ4"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:cropToPadding="true"
                     android:src="@drawable/ic_baseline_calendar_today_24" />
 
                 <TextView
-                    android:id="@+id/tVDateDebut1"
+                    android:id="@+id/tVDateDebutJ4"
                     android:layout_width="100dp"
                     android:layout_height="match_parent"
                     android:background="@drawable/bg_rectangle_order"
                     android:gravity="center" />
 
                 <ImageButton
-                    android:id="@+id/imageButtonHeure1"
+                    android:id="@+id/imageButtonHeureDebutJ4"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:cropToPadding="true"
                     android:src="@drawable/ic_baseline_access_time_24" />
 
                 <TextView
-                    android:id="@+id/tvHeureDebut"
+                    android:id="@+id/tvHeureDebutJ4"
                     android:layout_width="70dp"
                     android:layout_height="match_parent"
                     android:background="@drawable/bg_rectangle_order"
                     android:gravity="center" />
 
                 <ImageButton
-                    android:id="@+id/imageButtonDeleteFin1"
+                    android:id="@+id/imageButtonDeleteDebutJ4"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:cropToPadding="true"
@@ -82,35 +83,35 @@
                 android:orientation="horizontal">
 
                 <ImageButton
-                    android:id="@+id/imageButtonDate1"
+                    android:id="@+id/imageButtonDateFinJ4"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:cropToPadding="true"
                     android:src="@drawable/ic_baseline_calendar_today_24" />
 
                 <TextView
-                    android:id="@+id/tvDateDebut"
+                    android:id="@+id/tvDateFinJ4"
                     android:layout_width="100dp"
                     android:layout_height="match_parent"
                     android:background="@drawable/bg_rectangle_order"
                     android:gravity="center" />
 
                 <ImageButton
-                    android:id="@+id/imageButtonCalcul1"
+                    android:id="@+id/imageButtonHeureFinJ4"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:cropToPadding="true"
                     android:src="@drawable/ic_baseline_access_time_24" />
 
                 <TextView
-                    android:id="@+id/tvHeureDebut1"
+                    android:id="@+id/tvHeureFinJ4"
                     android:layout_width="70dp"
                     android:layout_height="match_parent"
                     android:background="@drawable/bg_rectangle_order"
                     android:gravity="center" />
 
                 <ImageButton
-                    android:id="@+id/imageButtonDelete"
+                    android:id="@+id/imageButtonDeleteFinJ4"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:cropToPadding="true"
@@ -133,7 +134,7 @@
                 android:orientation="horizontal">
 
                 <ImageButton
-                    android:id="@+id/imageButtonHeure3"
+                    android:id="@+id/imageButtonConduiteJ4"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:layout_weight="1"
@@ -141,7 +142,7 @@
                     android:src="@drawable/ic_testdrive" />
 
                 <ImageButton
-                    android:id="@+id/imageButtonHeure4"
+                    android:id="@+id/imageButtonTravailJ4"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:layout_weight="1"
@@ -149,7 +150,7 @@
                     android:src="@drawable/ic_baseline_clear_24" />
 
                 <ImageButton
-                    android:id="@+id/imageButtonHeure2"
+                    android:id="@+id/imageButtonDispoJ4"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:layout_weight="1"
@@ -164,7 +165,7 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/tvHeureDebut3"
+                    android:id="@+id/tvHeureConduiteJ4"
                     android:layout_width="70dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -172,7 +173,7 @@
                     android:gravity="center" />
 
                 <TextView
-                    android:id="@+id/tvHeureDebut4"
+                    android:id="@+id/tvHeureTravailJ4"
                     android:layout_width="70dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -180,7 +181,7 @@
                     android:gravity="center" />
 
                 <TextView
-                    android:id="@+id/tvHeureDebut2"
+                    android:id="@+id/tvHeureDispoJ4"
                     android:layout_width="70dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -198,20 +199,69 @@
             android:orientation="vertical"
             android:padding="8dp">
 
+            <TextView
+                android:id="@+id/tvTempsAmplitude"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="6dp"
+                android:text="Total de l'amplitude :"
+                android:textSize="14sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/tvTempsAmplitudeJ4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:text="00:00"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+
             <CheckBox
-                android:id="@+id/checkBox"
+                android:id="@+id/checkBox3HeuresReposJ4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Pause de + de 3h pendant l'amplitude" />
 
             <TextView
-                android:id="@+id/tvRepos11hRestant"
+                android:id="@+id/tvTempsService"
                 android:layout_width="match_parent"
-                android:layout_height="100dp"
+                android:layout_height="wrap_content"
                 android:padding="6dp"
                 android:text="Total du temps de service :"
                 android:textSize="14sp"
                 android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/tvTempsServiceJ4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:text="00:00"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/tvRepos11hRestant"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="6dp"
+                android:text="Total du temps de repos :"
+                android:textSize="14sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/tvTempsReposJ4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:text="00:00"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="match_parent"
+                android:layout_height="50dp" />
 
         </LinearLayout>
 
