--- a/app/src/main/res/layout/fragment_repos_hebdo1.xml
+++ b/app/src/main/res/layout/fragment_repos_hebdo1.xml
@@ -83,7 +83,7 @@
                             android:src="@drawable/ic_baseline_access_time_24" />
 
                         <TextView
-                            android:id="@+id/tvHeureDebut"
+                            android:id="@+id/tvHeureDebutJ2"
                             android:layout_width="70dp"
                             android:layout_height="match_parent"
                             android:background="@drawable/bg_rectangle_order"
